# EchoSV

./: .gitignore  README.md  pyproject.toml  requirements.txt
beds/: colo829bl_hap1_Ns.bed  colo829bl_hap2_Ns.bed  h1437bl_hap1_Ns.bed  h1437bl_hap2_Ns.bed  h2009bl_hap2_Ns.bed  hcc1937bl_hap2_Ns.bed  hcc1954bl_hap1_Ns.bed
echosv/: __init__.py  bed_utils.py  collect_suppread_lrs.py  collect_suppread_srs.py  generate_chain.py  main.py  match.py  sv_cmp_liftover.py  sv_cmp_mbm.py  vcf_utils.py
scripts/: 01_sv_merge_15callset.sh  02_sv_consolidate_dsa.sh  03_sv_compare_refs.sh
src/echosv/: __init__.py  bed_utils.py  collect_suppread_lrs.py  collect_suppread_srs.py  generate_chain.py  genotype.py  main.py  match.py  sv_cmp_liftover.py  sv_cmp_mbm.py  sv_merge.py  vcf_utils.py
src/echosv/beds/: h2009bl_hap1_Ns.bed  hcc1937bl_hap1_Ns.bed  hcc1954bl_hap2_Ns.bed  hg008bl_hap1_Ns.bed  hg008bl_hap2_Ns.bed
