[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echosv"
authors = [
    {name = "Yuwei Zhang", email="yuwei_zhang@hms.harvard.edu"}
]
description = "A novel tool for accurately merging haplotype-based SV calls and comparing SVs across reference genomes"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pysam",
    "intervaltree",
    "biopython",
    "scipy",
    "networkx",
    "pandas",
    "numpy",
    "rich",
]

[tool.setuptools.dynamic]
version = {attr = "echosv.__version__"}

[project.scripts]
echosv = "echosv.main:main"

[tool.setuptools.package-data]
echosv = ["beds/*.bed"]

[project.urls]
Homepage = "https://github.com/parklab/EchoSV"
Issues = "https://github.com/parklab/EchoSV/issues"